created doses controller

--- a/app/views/cocktails/home.html.erb
+++ b/app/views/cocktails/home.html.erb
@@ -1,2 +1,8 @@
 <h1>Cocktails#home</h1>
 <p>Find me in app/views/cocktails/home.html.erb</p>
+
+<% @ingredients.each do |ingredient| %>
+<ul>
+  <li><%= ingredient.name %></li>
+</ul>
+<% end %>
