created cocktail new and show views with controller actions

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Cocktails#home</h1>
-<p>Find me in app/views/cocktails/home.html.erb</p>
+<h1>Cocktails#index</h1>
 
 <% @ingredients.each do |ingredient| %>
 <ul>
