--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,2 +1,8 @@
 <h1>Doses#new</h1>
 <p>Find me in app/views/doses/new.html.erb</p>
+
+<%= simple_form_for [@cocktail, @dose] do |f| %>
+  <%= f.input :description %>
+  <%= f.association :ingredient %>
+  <%= f.submit "add a dose", class: "btn btn-primary" %>
+<% end %>
