--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,4 +1,5 @@
-<h1>Doses#new</h1>
+<h1><%= @cocktail.name %></h1>
+<h2>Add a new dose @ Doses#new</h2>
 <p>Find me in app/views/doses/new.html.erb</p>
 
 <%= simple_form_for [@cocktail, @dose] do |f| %>
