--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Cocktails#index</h1>
 
-<% @ingredients.each do |ingredient| %>
+<% @cocktails.each do |cocktail| %>
 <ul>
-  <li><%= ingredient.name %></li>
+  <li><%= cocktail.name %> | <%= link_to "Show", cocktail_path(cocktail) %></li>
 </ul>
 <% end %>
