--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -3,5 +3,8 @@
 
 <%= simple_form_for @cocktail do |f| %>
   <%= f.input :name %>
+  <%= f.input :image %>
   <%= f.submit "add a cocktail", class: "btn btn-primary" %>
 <% end %>
+<hr>
+<%= link_to "Back to cocktails", cocktails_path %>
