added directions to cocktail table and specific directions to Cuba Libre

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -2,6 +2,6 @@
 
 <% @cocktails.each do |cocktail| %>
 <ul>
-  <li><%= cocktail.name %> | <%= link_to "Show", cocktail_path(cocktail) %></li>
+  <li><%= cocktail.name %> | <%= link_to "See details", cocktail_path(cocktail) %></li>
 </ul>
 <% end %>
