--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -5,3 +5,5 @@
   <li><%= cocktail.name %> | <%= link_to "See details", cocktail_path(cocktail) %></li>
 </ul>
 <% end %>
+<hr>
+<%= link_to "Add a cocktail", new_cocktail_path, { class: "btn btn-primary" } %>
