--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -19,5 +19,5 @@
 <% end %>
 
 <hr>
-<%= link_to "Add a Dose", new_cocktail_dose_path(@cocktail) %> |
-<%= link_to "Back to cocktails", cocktails_path %>
+<%= link_to "Add a Dose", new_cocktail_dose_path(@cocktail), { class: "btn btn-primary" } %> |
+<%= link_to "Back to cocktails", cocktails_path, { class: "btn btn-primary" } %>
