standardized index page cocktail cards image sizes

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Cocktails#index</h1>
-  <div class="container">
+  <div class="container" id="drinks-menu">
     <% @cocktails.each do |cocktail| %>
       <div class="card" style="width: 18rem;">
         <img src="<%= cocktail.image %>" class="card-img-top" alt="<%= cocktail.name %>">
