--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,9 @@
+.card {
+  margin-bottom: 2em;
+  border-radius: 15px;
+  box-shadow: 5px 5px 20px 5px rgba(143,143,143,0.5);
+}
+
 .card-img-top {
     width: 100%;
     height: 15vw;
