--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Cocktails#index</h1>
+<div id="welcome-header">CLASSIC COCKTAILS</div>
   <div class="container" id="drinks-menu">
     <% @cocktails.each do |cocktail| %>
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 16rem;">
         <img src="<%= cocktail.image %>" class="card-img-top" alt="<%= cocktail.name %>">
         <div class="card-body">
           <h5 class="card-title"><%= cocktail.name %></h5>
-          <p class="card-text"><%= cocktail.directions[0..60] %>...</p>
+          <p class="card-text"><%= cocktail.directions[0..70] %>...</p>
           <%= link_to "See details", cocktail_path(cocktail), { class: "btn btn-primary" } %>
         </div>
       </div>
