added fixedadd cocktail button to front

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,7 @@
 @import "navbar";
 @import 'container';
 @import 'card';
+@import 'button';
 
 #welcome-header {
   font-family: 'Fredericka the Great', cursive;
