--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -12,5 +12,8 @@
     <% end %>
   </div>
 <hr>
-<%= link_to "Add a cocktail!", new_cocktail_path, { class: "btn btn-primary" } %>
 
+<div class="add-button-container">
+  <div class="add-button-container-header">ADD A COCKTAIL</div>
+  <%= link_to "<i class='fas fa-cocktail'></i>".html_safe, new_cocktail_path, { class: "add-button" } %>
+</div>
