--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,9 +2,12 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
 @import url('https://fonts.googleapis.com/css?family=Oswald:400,600|Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap');
 // Define fonts for body and headers
-$body-font: "Roboto", "Helvetica", "sans-serif";
+$body-font: "Playfair Display", "Helvetica", "sans-serif";
 $headers-font: "Oswald", "Helvetica", "sans-serif";
+
+// font-family: 'Playfair Display', serif;
 
 // $body-font: "Open Sans", "Helvetica", "sans-serif";
 // $headers-font: "Raleway", "Helvetica", "sans-serif";
