--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,4 +1,7 @@
-<div id="welcome-header">CLASSIC COCKTAILS</div>
+<div class="home-banner">
+  <div id="welcome-header">CLASSIC COCKTAILS</div>
+</div>
+
   <div class="container" id="drinks-menu">
     <% @cocktails.each do |cocktail| %>
       <div class="card" style="width: 16rem;">
@@ -6,7 +9,7 @@
         <div class="card-body">
           <h5 class="card-title"><%= cocktail.name %></h5>
           <p class="card-text"><%= cocktail.directions[0..70] %>...</p>
-          <%= link_to "See details", cocktail_path(cocktail), { class: "btn btn-primary" } %>
+          <%= link_to "See details", cocktail_path(cocktail), { class: "btn btn-outline-primary btn-sm" } %>
         </div>
       </div>
     <% end %>
