cleaned up cocktail show page

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,9 +5,37 @@
 }
 
 .card-img-top {
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    width: 100%;
-    height: 15vw;
-    object-fit: cover;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+}
+
+.card-img {
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  height: 100%;
+  object-fit: cover;
+}
+
+.cocktail-details {
+  display: flex;
+  // flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.ingredients {
+  width: 50%
+}
+
+.directions {
+  width: 50%;
+  margin-left: 30px;
+}
+
+ul {
+  // list-style-type: none;
+  padding: 0px 0px 0px 20px;
+  // margin: 0px;
 }
