--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -2,7 +2,7 @@
   <div id="welcome-header">CLASSIC COCKTAILS</div>
 </div>
 
-  <div class="container" id="drinks-menu">
+  <div class="container" id="cocktails">
     <% @cocktails.each do |cocktail| %>
       <div class="card bg-light" style="width: 16rem;">
         <img src="<%= cocktail.image %>" class="card-img-top" alt="<%= cocktail.name %>">
