--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,22 +1,37 @@
-<h1><%= @cocktail.name %></h1>
+<div class="container" id="cocktail">
 
-<%= image_tag @cocktail.image, alt: "Cuba Libre", width: "200px" %>
+    <div class="card mb-3" style="max-width: 70vw">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <img src="<%= @cocktail.image %>" class="card-img" alt="<%= @cocktail.name %>">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h1 class="card-title"><%= @cocktail.name %></h1>
+            <hr>
+              <div class="cocktail-details">
+                <div class="ingredients">
+                  <h5 style="font-weight: bold">INGREDIENTS</h5>
+                    <% @cocktail.doses.each do |dose| %>
+                      <ul>
+                        <li>
+                          <%= dose.ingredient.name %> | <%= dose.description %> |
+                          <%= link_to "Delete", cocktail_dose_path(@cocktail, dose), method: :delete, data: { confirm: 'Are you sure?' } %>
+                        </li>
+                      </ul>
+                    <% end %>
+                </div>
+                <div class="directions">
+                  <h5 style="font-weight: bold">DIRECTIONS</h5>
+                  <p class="card-text"><%= @cocktail.directions %></p>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<h5 style="font-weight: bold">DIRECTIONS</h5>
-
-<p><%= @cocktail.directions %></p>
-
-<h5 style="font-weight: bold">INGREDIENTS</h5>
-
-<% @cocktail.doses.each do |dose| %>
-  <ul>
-    <li>
-      <%= dose.ingredient.name %> | <%= dose.description %> |
-      <%= link_to "Delete", cocktail_dose_path(@cocktail, dose), method: :delete, data: { confirm: 'Are you sure?' } %>
-    </li>
-  </ul>
-
-<% end %>
+</div>
 
 <hr>
 <%= link_to "Add a Dose", new_cocktail_dose_path(@cocktail), { class: "btn btn-primary" } %> |
