--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -7,6 +7,7 @@
 #cocktail {
   height: 100vh;
   display: flex;
+  flex-direction: column;
   // margin-left: auto;
   // margin-right: auto;
   justify-content: center;
