--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -13,3 +13,26 @@
   justify-content: center;
   align-items: center;
 }
+
+#cocktail-new {
+  height: 100vh;
+  // width: 60vh;
+  display: flex;
+  // flex-direction: column;
+  // margin-left: auto;
+  // margin-right: auto;
+  justify-content: center;
+  align-items: center;
+}
+
+#cocktail-new-left {
+  display: flex;
+  width: 60px;
+}
+
+#cocktail-new-middle {
+}
+
+#cocktail-new-right {
+  width: 60px;
+}
