adjusted remove ingredient button on show page

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -15,7 +15,7 @@
                     <% @cocktail.doses.each do |dose| %>
                       <ul>
                         <li>
-                          <%= dose.ingredient.name %> | <%= dose.description %> |
+                          <%= dose.ingredient.name %> | <%= dose.description %>&nbsp&nbsp
                           <%= link_to "<i class='fas fa-minus-circle'></i>".html_safe, cocktail_dose_path(@cocktail, dose), method: :delete, data: { confirm: 'Are you sure?' }, style: "color:red" %>
                         </li>
                       </ul>
