Added generic cocktail photo for genuine option

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -3,7 +3,7 @@
     <div class="card mb-3" style="max-width: 70vw">
       <div class="row no-gutters">
         <div class="col-md-4">
-          <img src="<%= @cocktail.image %>" class="card-img" alt="<%= @cocktail.name %>">
+          <img src="<%= @cocktail.image.empty? ? @generic : @cocktail.image %>" class="card-img" alt="<%= @cocktail.name %>">
         </div>
         <div class="col-md-8">
           <div class="card-body">
