finished all views

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,7 +1,7 @@
 <div class="home-banner">
-  <div id="welcome-header">CLASSIC COCKTAILS</div>
+  <div id="welcome-header" style="color: black">CLASSIC COCKTAILS</div>
 </div>
-
+  <div id="welcome-header">CLASSIC COCKTAILS</div>
   <div class="container" id="cocktails">
     <% @cocktails.each do |cocktail| %>
       <div class="card bg-light" style="width: 16rem;">
