added banner image and redid back to cocktail links with specific anchor

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,6 +6,7 @@
 @import 'card';
 @import 'button';
 @import 'banner';
+@import 'test';
 
 #welcome-header {
   font-family: 'Fredericka the Great', cursive;
