--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,6 +1,17 @@
-<div class="home-banner">
+<!-- <div class="home-banner">
   <div id="welcome-header" style="color: black">CLASSIC COCKTAILS</div>
+</div> -->
+
+
+
+
+<div class="banner">
+    <div class="banner-container">
+      <h1 id="welcome-message">Click to drink!</h1>
+      <i class="fas fa-chevron-down fa-3x" id="arrow" style="color:#50a013"></i>
+    </div>
 </div>
+
   <div id="welcome-header">CLASSIC COCKTAILS</div>
   <div class="container" id="cocktails">
     <% @cocktails.each do |cocktail| %>
