--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container" id="cocktail-new">
 
   <div id="cocktail-new-left">
-    <%= link_to "<i class='fas fa-arrow-circle-left'></i>".html_safe, cocktails_path, { class: "btn btn-primary"} %>
+    <%= link_to "<i class='fas fa-arrow-circle-left'></i>".html_safe, cocktails_path(anchor: 'welcome-header'), { class: "btn btn-primary"} %>
   </div>
     <div id="cocktail-new-middle">
       <div class="card bg-light" style="width: 24rem;">
