--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -32,7 +32,7 @@
       </div>
     </div>
 <hr>
-<%= link_to "<i class='fas fa-arrow-circle-left'></i> &nbspBack to cocktails".html_safe, cocktails_path, { class: "btn btn-primary" } %>
+<%= link_to "<i class='fas fa-arrow-circle-left'></i> &nbspBack to cocktails".html_safe, cocktails_path(anchor: 'welcome-header'), { class: "btn btn-primary" } %>
 
 </div>
 
