added cockail icon to banner

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -8,7 +8,7 @@
 <div class="banner">
     <div class="banner-container">
       <h1 id="welcome-message">Click to drink!</h1>
-      <i class="fas fa-chevron-down fa-3x" id="arrow" style="color:#50a013"></i>
+      <i class="fas fa-cocktail fa-3x" id="arrow" style="color:#50a013"></i>
     </div>
 </div>
 
