--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,18 +1,37 @@
-.navbar {
-  justify-content: space-between;
-  background: white;
-  background-color: transparent;
-  transition: 0.5s background-color ease;
-}
 
-.navbar-white {
-  background-color: white;
-}
+// #navbar-clear {
+//   justify-content: space-between;
+//   background: white;
+//   background-color: transparent;
+//   transition: 0.5s background-color ease;
+// }
 
-.navbar .navbar-collapse {
-  flex-grow: 0;
-}
+// #navbar-solid {
+//   background-color: #F7F7F9;
+//   border-top: 1px solid #E4E5E6;
+// }
 
 .navbar .navbar-brand {
   font-family: Oswald;
 }
+
+// .navbar {
+//   visibility: hidden;
+//   justify-content: space-between;
+//   background: white;
+//   background-color: white;
+//   transition: 0.5s background-color ease;
+// }
+
+// .navbar-white {
+//   visibility: visible;
+// }
+
+// .navbar .navbar-collapse {
+//   flex-grow: 0;
+// }
+
+// .navbar .navbar-brand img {
+//   width: 40px;
+// }
+
