--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light bg-light justify-content-between fixed-bottom invisible">
   <a class="navbar-brand"><i class="fas fa-cocktail"></i> Classic Cocktails</a>
-  <form class="form-inline">
-    <input class="form-control mr-sm-2" type="search" aria-label="Search">
+  <form class="form-inline" action="/cocktails/#welcome-header">
+    <input name="keyword" class="form-control mr-sm-2" type="search" aria-label="Search">
     <button class="btn" type="submit"><i class="fas fa-search"></i></button>
   </form>
 </nav>
