--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,6 +2,7 @@
   margin-bottom: 2em;
   border-radius: 15px;
   box-shadow: 5px 5px 20px 5px rgba(143,143,143,0.5);
+  max-height: 55vh;
 }
 
 .card-img-top {
@@ -17,7 +18,7 @@
   border-top-right-radius: 15px;
   width: 100%;
   // height: 15vw;
-  // object-fit: cover;
+  object-fit: cover;
 }
 
 .card-img {
