--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,6 +15,10 @@
   font-family: Oswald;
 }
 
+.navbar {
+  z-index: 1;
+}
+
 // .navbar {
 //   visibility: hidden;
 //   justify-content: space-between;
