fixed search result view so that card does not stretch height of container

--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -4,7 +4,7 @@
     <%= link_to "<i class='fas fa-arrow-circle-left'></i>".html_safe, cocktails_path(anchor: 'welcome-header'), { class: "btn btn-primary"} %>
   </div>
     <div id="cocktail-new-middle">
-      <div class="card bg-light" style="width: 24rem;">
+      <div class="card-new bg-light"style="width: 24rem;">
         <img src="https://www.muddlebox.com/wp-content/uploads/2018/11/3355-Mezclar-Piccolo-Shaker-Lifestyle-2.jpg" class="card-img-top-new" alt="Cocktail shaker">
           <div class="card-body">
             <%= simple_form_for @cocktail do |f| %>
