--- a/app/assets/stylesheets/components/_test.scss
+++ b/app/assets/stylesheets/components/_test.scss
@@ -1,5 +1,6 @@
 .banner {
-  background-image: url('https://images.unsplash.com/photo-1470337458703-46ad1756a187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1498&q=80');
+  // background-image: url('https://images.unsplash.com/photo-1470337458703-46ad1756a187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1498&q=80');
+  background-image: url('https://media.giphy.com/media/lXiRLRoJyXtcRQWd2/giphy.gif');
   height: 100vh;
   display: flex;
   align-items: center;
@@ -21,6 +22,7 @@
 
 #welcome-message {
   font-size: 72px;
+  color: white;
   padding-bottom: .5em;
 }
 
